# 3-python-package-exercise-team1-pt3

./: .gitignore  Documentation.md  Pipfile  README.md  example-program.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/: __init__.py  __main__.py  weather.py
tests/: test_weather.py
