[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather"
version = "0.0.1"
authors = [
  { name="Alessandro Landi", email="al6723@nyu.edu" },
]
description = "A small weather package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-team1-pt3"
